--- a/index.html
+++ b/index.html
@@ -1,4 +1,19 @@
----
-layout: home
-author_profile: true
----
+<!doctype html>
+
+<html>
+
+  <head>
+
+    <title>Theos-Environdocs!</title>
+
+  </head>
+
+  <body>
+
+    <p>
+      <strong>Hello!</strong> 
+    </p>
+
+  </body>
+
+</html>
